# thermocouples

./: .gitignore  CHANGELOG.md  COMMIT_MESSAGE.txt  MANIFEST.in  PYPI_RELEASE_GUIDE.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  tests.yml
src/thermocouples/: __init__.py  base.py  core.py  registry.py
src/thermocouples/types/: type_b.py  type_e.py  type_j.py  type_k.py  type_n.py  type_r.py  type_s.py  type_t.py
tests/: test_basic.py
