[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermocouples"
version = "1.1.0"
authors = [
    {name = "Dipl.-Ing. Gregor Oppitz", email = "gregor.oppitz@dlr.de"},
]
description = "High-accuracy NIST-compliant thermocouple calculations for all standard types"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
keywords = [
    "thermocouple",
    "temperature",
    "voltage",
    "nist",
    "measurement",
    "sensor",
    "instrumentation",
    "seebeck",
    "cold-junction",
]

[project.urls]
Homepage = "https://github.com/your-username/python-thermocouples"
Documentation = "https://github.com/your-username/python-thermocouples#readme"
Repository = "https://github.com/your-username/python-thermocouples.git"
"Bug Tracker" = "https://github.com/your-username/python-thermocouples/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
thermocouples = ["py.typed"]
